; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_seat.c_seat_configure_touch.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_seat.c_seat_configure_touch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_seat = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.sway_seat_device = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sway_seat*, %struct.sway_seat_device*)* @seat_configure_touch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @seat_configure_touch(%struct.sway_seat* %0, %struct.sway_seat_device* %1) #0 {
  %3 = alloca %struct.sway_seat*, align 8
  %4 = alloca %struct.sway_seat_device*, align 8
  store %struct.sway_seat* %0, %struct.sway_seat** %3, align 8
  store %struct.sway_seat_device* %1, %struct.sway_seat_device** %4, align 8
  %5 = load %struct.sway_seat*, %struct.sway_seat** %3, align 8
  %6 = getelementptr inbounds %struct.sway_seat, %struct.sway_seat* %5, i32 0, i32 0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.sway_seat_device*, %struct.sway_seat_device** %4, align 8
  %11 = getelementptr inbounds %struct.sway_seat_device, %struct.sway_seat_device* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @wlr_cursor_attach_input_device(i32 %9, i32 %14)
  %16 = load %struct.sway_seat*, %struct.sway_seat** %3, align 8
  %17 = load %struct.sway_seat_device*, %struct.sway_seat_device** %4, align 8
  %18 = call i32 @seat_apply_input_config(%struct.sway_seat* %16, %struct.sway_seat_device* %17)
  ret void
}

declare dso_local i32 @wlr_cursor_attach_input_device(i32, i32) #1

declare dso_local i32 @seat_apply_input_config(%struct.sway_seat*, %struct.sway_seat_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
